--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         content="webpage for paper: Neural Parameterization for Dynamic Human Head Editing">
   <meta name="keywords" content="NeP, NeUVF, Neural Parameterization, NeRF, NeRF Editing, Dynamic NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="tHWkCv5kReG-fq--FCW61agzVOiLPlJyOQ_-2OEmgy8" />
   <title>Neural Parameterization</title>
 
   <link rel="stylesheet" href="./static/css/bulma.min.css">
